WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260163
ServiceWorkerRegistration data is not deleted correctly
https://bugs.webkit.org/show_bug.cgi?id=260163
Summary
ServiceWorkerRegistration data is not deleted correctly
Sihui Liu
Reported
2023-08-14 11:53:17 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2023-08-14 11:53:31 PDT
rdar://112092827
Sihui Liu
Comment 2
2023-08-14 13:52:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16679
EWS
Comment 3
2023-08-14 15:56:48 PDT
Committed
266882@main
(8e9f2eb04c2e): <
https://commits.webkit.org/266882@main
> Reviewed commits have been landed. Closing PR #16679 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug