ServiceWorkerRegistration data is not deleted correctly https://bugs.webkit.org/show_bug.cgi?id=260163 rdar://112092827

Reviewed by Brent Fulgham.

bindText() returns error code and 0 (SQLITE_OK) means the operation succeeds, so updateRegistrations should not return
early.

API Test: WKWebsiteDataStore.RemoveServiceWorkerDataByOrigin

* Source/WebCore/workers/service/server/SWRegistrationDatabase.cpp:
(WebCore::SWRegistrationDatabase::updateRegistrations):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WebsiteDataStoreCustomPaths.mm:

Canonical link: https://commits.webkit.org/266882@main